tests/mm0_mmu/fail/bad-sort4132.mmu
-- bad modifier order
(sort s4132 free pure provable strict)